resolved the qa build bug bug not aligning well even in dev

--- a/my-app/platforms/android/assets/www/css/main.css
+++ b/my-app/platforms/android/assets/www/css/main.css
@@ -231,28 +231,16 @@ body{
 }
 
 
-<<<<<<< HEAD
-header{
-  display:none;
-}
-=======
 
 header{
   display:none;
 }
-
->>>>>>> c9b69bd9f2b8217438ecaf4d20a5bf446cf41bd8
 
 
 /*button*/
 #btn-replay{
   float:left;
-  border:none;
-  background:none;
   font-size:10em;
-  margin-left:-2em;
-  /*margin:-1em 0 0 0;*/
-  padding:0;
 }
 
 
